--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
       <artifactId>dom4j</artifactId>
       <version>2.1.1</version>
     </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.0.35.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
